full edit portfolio completed
